--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eldelta",
+  "name": "portfolio",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,32 +10,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.0",
-    "@angular/cdk": "^13.3.7",
-    "@angular/common": "~13.0.0",
-    "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/forms": "~13.0.0",
-    "@angular/material": "^13.3.7",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
+    "@angular/animations": "^12.1.5",
+    "@angular/cdk": "^12.2.9",
+    "@angular/common": "~12.1.1",
+    "@angular/compiler": "~12.1.1",
+    "@angular/core": "~12.1.1",
+    "@angular/flex-layout": "^12.0.0-beta.35",
+    "@angular/forms": "~12.1.1",
+    "@angular/material": "^12.2.9",
+    "@angular/platform-browser": "~12.1.1",
+    "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/router": "~12.1.1",
+    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
+    "apexcharts": "^3.35.3",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "material-design-icons": "^3.0.1",
+    "material-icons": "^1.9.1",
+    "ng-apexcharts": "^1.7.1",
+    "popper.js": "^1.16.1",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.2.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
-    "@angular/cli": "~13.0.3",
-    "@angular/compiler-cli": "~13.0.0",
-    "@types/jasmine": "~3.10.0",
+    "@angular-devkit/build-angular": "~12.1.1",
+    "@angular/cli": "~12.1.1",
+    "@angular/compiler-cli": "~12.1.1",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
+    "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.4.3"
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "typescript": "~4.3.2"
   }
 }
